--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ElectroFix | Electronics Tools & Repair</title>
-  <link rel="stylesheet" href="css/style.css" />
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Electronics Repair & Tools</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <h1>ElectroFix</h1>
-    <nav>
-      <ul>
-        <li><a href="#" class="nav-link active" data-page="home">Home</a></li>
-        <li><a href="#" class="nav-link" data-page="about">About</a></li>
-        <li><a href="#" class="nav-link" data-page="services">Services</a></li>
-        <li><a href="#" class="nav-link" data-page="contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <main id="content"></main>
+  <!-- COVER / HERO SECTION -->
+  <section class="cover-hero fade-in">
+    <div class="hero-overlay">
+      <div class="hero-content">
+        <h1>Welcome to Electronics Repair & Tools</h1>
+        <p>Your trusted partner for fast, reliable, and affordable electronics solutions.</p>
+        <a href="home.html" class="btn" style="color: rgb(12, 14, 14);">Enter Site</a>
 
-  <footer>
-    <p>© 2025 ElectroFix. All rights reserved.</p>
-  </footer>
+      </div>
+    </div>
+  </section>
+  <script>
+  setTimeout(() => {
+    window.location.href = "index.html";
+  }, 5000); // redirects after  seconds
+</script>
 
-  <script src="script.js"></script>
+
 </body>
 </html>
