--- a/index.html
+++ b/index.html
@@ -1,31 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Electronics Repair & Tools</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ElectroFix | Electronics Repair</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
 
-  <!-- COVER / HERO SECTION -->
-  <section class="cover-hero fade-in">
+  <section class="cover-hero">
     <div class="hero-overlay">
       <div class="hero-content">
-        <h1>Welcome to Electronics Repair & Tools</h1>
-        <p>Your trusted partner for fast, reliable, and affordable electronics solutions.</p>
-        <a href="home.html" class="btn" style="color: rgb(12, 14, 14);">Enter Site</a>
-
+        <h1>ElectroFix Solutions</h1>
+        <p>Expert repair and maintenance for all your electronics — fast, reliable, and affordable.</p>
+        <a href="home.html" class="btn">Enter Site</a>
       </div>
     </div>
   </section>
-  <script>
-  setTimeout(() => {
-    window.location.href = "index.html";
-  }, 5000); // redirects after  seconds
-</script>
-
 
 </body>
 </html>
